<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013-2020 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Deployment Tracker</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="add_new">Create New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="menu_screenshot">Toggle Screen Shot Mode</string>
    <string name="menu_sync">Sync Settings</string>

    <!-- Display fragment strings -->
    <string name="date_range">%1$s to %2$s</string>

    <plurals name="days_remaining">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>

    <plurals name="days_complete">
        <item quantity="one">%d day complete</item>
        <item quantity="other">%d days complete</item>
    </plurals>

    <!-- Generic strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="info">Info</string>
    <string name="pie">Mmm, pie</string>
    <string name="comma">", "</string>
    <string name="loading">Loading…</string>
    <string name="welcome">Welcome</string>
    <string name="about_screenshot">About Screen Shot Mode</string>

    <!-- Widget Configuration Strings -->
    <string name="widget_pick">Select Item</string>
    <string name="text_color">Text Color</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="widget_error">There was an error loading the widget. Please remove and re-add the widget</string>

    <!-- Create strings -->
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="color_completed">Completed color:</string>
    <string name="color_remaining">Remaining color:</string>
    <string name="circle_view">Circle View</string>
    <string name="bar_view">Bar View</string>

    <!-- Confirmation Dialog -->
    <string name="confirm">Are you sure you want to delete \'%1$s\'?</string>
    <string name="close">Close</string>

    <!-- Error Strings -->
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_start">Enter a valid start date</string>
    <string name="invalid_end">End date is not after start date</string>
    <string name="sync_account_error">There was an error with your sync account</string>

    <!-- Info fragment text -->
    <string name="howto_add">To add data, tap on the + icon in the Action Bar.</string>

    <!-- DB Upgrade strings -->
    <string name="db_upgrade">Upgrading database, please wait…</string>

    <!-- Sync setup strings -->
    <string name="sign_out">Sign Out</string>
    <string name="sync_details">By logging in with your Google account, your data will be synced to the cloud, and any changes you make
        will appear on all devices with sync enabled.\n\n
    Your Google account is used so that you don\'t need to create and remember another password.\n\n
        <a href="https://github.com/Tortel/DeployTrack/blob/master/PrivacyPolicy.md">Privacy Policy</a>
    </string>

    <string name="signed_in">Signed in as %s</string>
    <string name="signed_out">Signed Out</string>

    <string name="pref_sync_not_enabled">Sync is currently not enabled</string>
    <string name="pref_sync_enabled">Sync is enabled using %s</string>
    <string name="tap_to_change_sync">Tap to change sync settings</string>

    <!-- Preference Strings -->
    <string name="prefs_display">Display Settings</string>
    <string name="prefs_animate">Enable Animation</string>
    <string name="prefs_animate_summary">Enable animating the circle and main text</string>
    <string name="prefs_main_view">Change Main View</string>
    <string name="prefs_main_view_summary">Choose what to display as the bold text</string>
    <string name="prefs_light_theme">Use a light theme</string>
    <string name="prefs_light_theme_summary">The app will restart to apply the new theme</string>
    <string name="prefs_customization">Customization</string>
    <string name="prefs_hide_date">Hide Dates</string>
    <string name="prefs_hide_date_summary">Hide the start and end dates</string>
    <string name="prefs_hide_days">Hide Days Completed/Remaining</string>
    <string name="prefs_hide_days_summary">Hide the days completed and remaining</string>
    <string name="prefs_hide_percentage">Hide Percentage</string>
    <string name="prefs_hide_percentage_summary">Hide the percent complete</string>
    <string name="prefs_privacy_policy">Privacy Policy</string>
    <string name="prefs_privacy_policy_summary">View the application\'s privacy policy</string>
    <string name="other">Other</string>
    <string name="send_feedback_summary">Open an Email application to send feedback to the developer</string>
    <string name="show_welcome">Show Welcome</string>
    <string name="show_welcome_summary">Show the welcome dialog again</string>
    <string name="show_about_screenshot">Show About Screen Shot Mode</string>
    <string name="show_about_screenshot_summary">Show the about screen shot mode dialog again</string>
    <string name="prefs_analytics">Enable Anonymous Statistics</string>
    <string name="prefs_analytics_summary">Help make the application better by reporting anonymous usage statistics</string>

    <!-- About strings -->
    <string name="about_app">About Deployment Tracker</string>
    <string name="author">Author</string>
    <string name="app_author">Scott Warner</string>
    <string name="license">License</string>
    <string name="apache2">Apache 2</string>
    <string name="source">Source</string>
    <string name="source_desc">View on GitHub</string>
    <string name="changelog">Changelog</string>
    <string name="version">Version %1$s</string>

    <string name="libraries">Third Party Libraries Used</string>

</resources>
