<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013-2023 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_display">
		<CheckBoxPreference
		    android:key="pref_animate"
		    android:title="@string/prefs_animate"
		    android:summary="@string/prefs_animate_summary"
		    android:defaultValue="true" />
		<ListPreference 
		    android:key="pref_main_view"
		    android:title="@string/prefs_main_view"
		    android:summary="@string/prefs_main_view_summary"
		    android:dialogTitle="@string/prefs_main_view"
		    android:entries="@array/prefs_main_view_type"
		    android:entryValues="@array/prefs_main_view_values"
		    android:defaultValue="0"
		    />
		<CheckBoxPreference
		    android:key="pref_light_theme"
		    android:title="@string/prefs_light_theme"
		    android:summary="@string/prefs_light_theme_summary"
		    android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/prefs_customization">
		<CheckBoxPreference 
		    android:key="pref_hide_date"
		    android:title="@string/prefs_hide_date"
		    android:summary="@string/prefs_hide_date_summary"
		    android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_hide_days"
            android:title="@string/prefs_hide_days"
            android:summary="@string/prefs_hide_days_summary"
            android:defaultValue="false" />
		<CheckBoxPreference 
		    android:key="pref_hide_percent"
		    android:title="@string/prefs_hide_percentage"
		    android:summary="@string/prefs_hide_percentage_summary"
		    android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/menu_sync">
		<Preference
			android:key="pref_sync_info"
			android:title="@string/pref_sync_not_enabled"
			android:summary="@string/tap_to_change_sync" />
		<Preference
			android:key="pref_privacy_policy"
			android:title="@string/prefs_privacy_policy"
			android:summary="@string/prefs_privacy_policy_summary">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="https://github.com/Tortel/DeployTrack/blob/master/PrivacyPolicy.md"
				/>
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/other">
		<Preference android:title="@string/about"
			android:summary="@string/about_app">
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="com.tortel.deploytrack"
				android:targetClass="com.tortel.deploytrack.AboutActivity"
				/>
		</Preference>
	    <Preference android:title="@string/send_feedback"
	        android:summary="@string/send_feedback_summary">
	        <intent
	            android:action="android.intent.action.VIEW"
	            android:data="mailto:Swarner.dev@gmail.com?subject=Deployment Tracker Feedback"
	            />
	    </Preference>
        <Preference
            android:key="pref_show_welcome"
            android:title="@string/show_welcome"
            android:summary="@string/show_welcome_summary" />
        <Preference
            android:key="pref_show_about_screenshot"
            android:title="@string/show_about_screenshot"
            android:summary="@string/show_about_screenshot_summary" />
		<CheckBoxPreference
			android:key="pref_analytics"
			android:title="@string/prefs_analytics"
			android:summary="@string/prefs_analytics_summary"
			android:defaultValue="true" />
	</PreferenceCategory>
</PreferenceScreen>