<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013-2016 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/widget_pick"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.ogaclejapan.smarttablayout.SmartTabLayout
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:stl_defaultTabTextHorizontalPadding="24dp"
        app:stl_indicatorColor="@color/primary"
        app:stl_indicatorInterpolation="linear"
        app:stl_indicatorThickness="3dp"
        app:stl_titleOffset="auto_center"
        app:stl_underlineThickness="1dp"
        app:stl_defaultTabTextColor="?attr/tabTextColor" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/divider"
        android:paddingBottom="5dip" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_color"
        style="?android:attr/listSeparatorTextViewStyle" />

   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <RadioButton
          android:id="@+id/widget_light_text"
          android:checked="true"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/light"
          android:onClick="onClick" />

       <RadioButton
          android:id="@+id/widget_dark_text"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/dark"
          android:onClick="onClick" />

   </RadioGroup>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       tools:ignore="buttonStyle">

       <Button
           android:id="@+id/button_cancel"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.45"
           android:onClick="onClick"
           android:text="@string/cancel" />

       <Button
           android:id="@+id/button_save"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.45"
           android:onClick="onClick"
           android:text="@string/save" />

   </LinearLayout>

</LinearLayout>
