<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/about"
        app:navigationIcon="@drawable/ic_arrow_back_24dp"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="@dimen/about_app_icon"
                android:layout_height="@dimen/about_app_icon"
                android:layout_gravity="center"
                android:layout_margin="@dimen/about_app_icon_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_row_pad_vertical"
                android:paddingBottom="@dimen/about_row_pad_vertical"
                android:paddingStart="@dimen/about_row_pad_horizontal"
                android:paddingEnd="@dimen/about_row_pad_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/ic_baseline_info_24"
                    android:tint="?attr/colorOnBackground"
                    android:layout_width="@dimen/about_row_icon"
                    android:layout_height="@dimen/about_row_icon"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/about_row_text_padding"
                    android:paddingEnd="@dimen/about_row_text_padding"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/version"
                        android:text="@string/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_row_pad_vertical"
                android:paddingBottom="@dimen/about_row_pad_vertical"
                android:paddingStart="@dimen/about_row_pad_horizontal"
                android:paddingEnd="@dimen/about_row_pad_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/ic_baseline_create_24"
                    android:tint="?attr/colorOnBackground"
                    android:layout_width="@dimen/about_row_icon"
                    android:layout_height="@dimen/about_row_icon"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/about_row_text_padding"
                    android:paddingEnd="@dimen/about_row_text_padding"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:text="@string/app_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_row_pad_vertical"
                android:paddingBottom="@dimen/about_row_pad_vertical"
                android:paddingStart="@dimen/about_row_pad_horizontal"
                android:paddingEnd="@dimen/about_row_pad_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:onClick="itemClicked"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/ic_baseline_description_24"
                    android:tint="?attr/colorOnBackground"
                    android:layout_width="@dimen/about_row_icon"
                    android:layout_height="@dimen/about_row_icon"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/about_row_text_padding"
                    android:paddingEnd="@dimen/about_row_text_padding"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:text="@string/apache2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_row_pad_vertical"
                android:paddingBottom="@dimen/about_row_pad_vertical"
                android:paddingStart="@dimen/about_row_pad_horizontal"
                android:paddingEnd="@dimen/about_row_pad_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:onClick="itemClicked"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/ic_baseline_code_24"
                    android:tint="?attr/colorOnBackground"
                    android:layout_width="@dimen/about_row_icon"
                    android:layout_height="@dimen/about_row_icon"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/about_row_text_padding"
                    android:paddingEnd="@dimen/about_row_text_padding"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:text="@string/source_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_row_pad_vertical"
                android:paddingBottom="@dimen/about_row_pad_vertical"
                android:paddingStart="@dimen/about_row_pad_horizontal"
                android:paddingEnd="@dimen/about_row_pad_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:onClick="itemClicked"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/ic_privacy_tip_24px"
                    android:tint="?attr/colorOnBackground"
                    android:layout_width="@dimen/about_row_icon"
                    android:layout_height="@dimen/about_row_icon"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/about_row_text_padding"
                    android:paddingEnd="@dimen/about_row_text_padding"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/prefs_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:text="@string/prefs_privacy_policy_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libraries"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_library"
                />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
